# jsundg-chess-gui

rust-task-5/chess-gui-templates/ggez-template/: Cargo.toml
rust-task-5/chess-gui-templates/ggez-template/src/: main.rs
