[package]
name = "schack_gui"
version = "0.1.0"
authors = ["Eskil Queseth <eskilq@kth.se>", "Viola Söderlund <violaso@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jblomlof-chess = { git = "https://github.com/IndaPlus22/jblomlof-chess" } # Replace this with the library you want to use
linked-hash-map = "0.5.4" 
ggez = "0.6.1"